# thirdanswer

./: LICENSE  README.md  pyproject.toml
notebooks/: thirdanswer_demo.ipynb
thirdanswer/: __init__.py  analyzer.py  compare.py  compass.py  errors.py  honest.py  neutrostats.py
thirdanswer/providers/: __init__.py  base.py  groq.py  ollama.py
