[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirdanswer"
version = "0.3.0"
description = "Neutrosophic logic toolkit — evaluate AI uncertainty and perform statistics beyond classical limits using T,I,F (Truth, Indeterminacy, Falsity)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Maikel Yelandi Leyva-Vazquez", email = "mleyvaz@gmail.com"},
    {name = "Florentin Smarandache"},
]
keywords = [
    "AI", "uncertainty", "neutrosophic", "hallucination", "LLM",
    "truth", "indeterminacy", "falsity", "paraconsistency",
    "epistemic", "confidence", "evaluation", "statistics",
    "interval-statistics", "neutrosophic-statistics", "smarandache",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
groq = ["groq>=0.4.0"]
all = ["groq>=0.4.0"]

[project.urls]
Homepage = "https://github.com/mleyvaz/thirdanswer"
Documentation = "https://the-third-answer.streamlit.app"
Repository = "https://github.com/mleyvaz/thirdanswer"
Issues = "https://github.com/mleyvaz/thirdanswer/issues"
